--- a/index.html
+++ b/index.html
@@ -7,12 +7,14 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header class="header">
-        <h1>Mahad Ahmad</h1>
-        <p>Python Developer | AI Engineer | Data Scientist</p>
-        <a href="#contact" class="cta">Get in Touch</a>
+    <header class="hero">
+        <div class="container">
+            <h1 class="hero-title">Mahad Ahmad</h1>
+            <p class="hero-subtitle">Python Developer | AI Engineer | Technical Writer</p>
+            <a href="#contact" class="btn">Get in Touch</a>
+        </div>
     </header>
-    
+
     <nav class="navbar">
         <ul>
             <li><a href="#about">About</a></li>
@@ -21,42 +23,71 @@
             <li><a href="#contact">Contact</a></li>
         </ul>
     </nav>
-    
-    <section id="about" class="section">
-        <h2>About Me</h2>
-        <p>I craft innovative business applications that drive growth and efficiency. With expertise in Python, Django, Flask, and machine learning, I deliver scalable and impactful solutions. Let's create something amazing!</p>
-    </section>
 
-    <section id="experience" class="section">
-        <h2>Experience</h2>
-        <ul>
-            <li>Python Developer - HubSol Technologies (2022-2024)</li>
-            <li>Content Writer - Its Time News (2023-2024)</li>
-        </ul>
-    </section>
-
-    <section id="skills" class="section">
-        <h2>Skills</h2>
-        <div class="skills-list">
-            <span>Python</span>
-            <span>Django</span>
-            <span>Flask</span>
-            <span>REST APIs</span>
-            <span>PostgreSQL</span>
-            <span>Docker</span>
-            <span>Machine Learning</span>
-            <span>Data Analysis</span>
+    <section id="about" class="section about">
+        <div class="container">
+            <h2>About Me</h2>
+            <p>
+                I am a passionate Python Developer with expertise in AI, Machine Learning, and Technical Writing.
+                Combining technical and creative abilities, I craft solutions that drive growth and innovation.
+                I excel in storytelling through data, delivering actionable strategies and captivating content.
+            </p>
         </div>
     </section>
 
-    <section id="contact" class="section">
-        <h2>Contact</h2>
-        <p>Email: <a href="mailto:mahadahmad832@gmail.com">mahadahmad832@gmail.com</a></p>
-        <p>LinkedIn: <a href="https://linkedin.com/in/mahad-ahmad-4351a3249" target="_blank">My Profile</a></p>
+    <section id="experience" class="section experience">
+        <div class="container">
+            <h2>Experience</h2>
+            <div class="experience-list">
+                <div class="experience-item">
+                    <h3>Python Developer</h3>
+                    <p>Scraperrs | Oct 2024 – Present</p>
+                </div>
+                <div class="experience-item">
+                    <h3>AI Transcriber / Prompt Engineer</h3>
+                    <p>TriVA Global | Aug 2024 – Oct 2024</p>
+                </div>
+                <div class="experience-item">
+                    <h3>Technical Content Writer</h3>
+                    <p>Pk.ContentWriter | May 2022 – Jun 2024</p>
+                </div>
+                <div class="experience-item">
+                    <h3>Data Scientist / ML Engineer</h3>
+                    <p>Hub Sol Technologies | May 2022 – Apr 2024</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="skills" class="section skills">
+        <div class="container">
+            <h2>Skills</h2>
+            <div class="skills-grid">
+                <span>Python</span>
+                <span>SQL</span>
+                <span>Machine Learning</span>
+                <span>REST APIs</span>
+                <span>Docker</span>
+                <span>Anthropic Claude</span>
+                <span>SEO Writing</span>
+                <span>Git</span>
+            </div>
+        </div>
+    </section>
+
+    <section id="contact" class="section contact">
+        <div class="container">
+            <h2>Contact Me</h2>
+            <p>Email: <a href="mailto:mahadahmad832@gmail.com">mahadahmad832@gmail.com</a></p>
+            <p>LinkedIn: <a href="https://linkedin.com/in/mahad-ahmad-4351a3249" target="_blank">linkedin.com/in/mahad-ahmad-4351a3249</a></p>
+            <p>GitHub: <a href="https://github.com/mahmad831" target="_blank">github.com/mahmad831</a></p>
+        </div>
     </section>
 
     <footer class="footer">
-        <p>© 2024 Mahad Ahmad. All Rights Reserved.</p>
+        <div class="container">
+            <p>© 2024 Mahad Ahmad. All Rights Reserved.</p>
+        </div>
     </footer>
 </body>
 </html>
