--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header class="hero">
         <div class="container">
             <h1 class="hero-title">Mahad Ahmad</h1>
-            <p class="hero-subtitle">Python Developer | AI Engineer | Technical Writer</p>
+            <p class="hero-subtitle">Assembling AI Solutions with Assorted Approach (Machine Learning Solutions Engineer || AI Consultant ) A Writer with Yearning of Software Documentation/ Engineering, Scientific and Business.</p>
             <a href="#contact" class="btn">Get in Touch</a>
         </div>
     </header>
@@ -19,6 +19,7 @@
         <ul>
             <li><a href="#about">About</a></li>
             <li><a href="#experience">Experience</a></li>
+            <li><a href="#experience">Education</a></li>
             <li><a href="#skills">Skills</a></li>
             <li><a href="#contact">Contact</a></li>
         </ul>
@@ -28,9 +29,7 @@
         <div class="container">
             <h2>About Me</h2>
             <p>
-                I am a passionate Python Developer with expertise in AI, Machine Learning, and Technical Writing.
-                Combining technical and creative abilities, I craft solutions that drive growth and innovation.
-                I excel in storytelling through data, delivering actionable strategies and captivating content.
+               This gives me a unique set of skills that aren't usually found in a single worker. These skills include data science, content creation, AI engineering, and running a business. As you can see from my resume, I love breaking news and telling powerful stories. This is what drives me to make data real by giving strategies and powerful content. Drawing on my skills in Python programming, machine learning, and artificial intelligence, I come up with unique approaches that help set strategic goals. A leader with a track record of success in the gaming industry who is dedicated to doing great work and learning the best technical and artistic skills to help businesses and inspire others to reach the same level of success. I have a lot of experience, which helps me look at problems from different angles. I see this as a strength when it comes to adding to growth and innovation.
             </p>
         </div>
     </section>
@@ -41,19 +40,19 @@
             <div class="experience-list">
                 <div class="experience-item">
                     <h3>Python Developer</h3>
-                    <p>Scraperrs | Oct 2024 – Present</p>
+                    <p>Scraperrs | Oct 2024 – Present | Lahore Punjab </p>
                 </div>
                 <div class="experience-item">
                     <h3>AI Transcriber / Prompt Engineer</h3>
-                    <p>TriVA Global | Aug 2024 – Oct 2024</p>
+                    <p>TriVA Global | Aug 2024 – Oct 2024 | Birmingham , UK - Remote</p>
                 </div>
                 <div class="experience-item">
                     <h3>Technical Content Writer</h3>
-                    <p>Pk.ContentWriter | May 2022 – Jun 2024</p>
+                    <p>Pk.ContentWriter | May 2022 – Jun 2024 - Remote</p>
                 </div>
                 <div class="experience-item">
                     <h3>Data Scientist / ML Engineer</h3>
-                    <p>Hub Sol Technologies | May 2022 – Apr 2024</p>
+                    <p>Hub Sol Technologies | May 2022 – Apr 2024 - Remote </p>
                 </div>
             </div>
         </div>
@@ -64,13 +63,14 @@
             <h2>Skills</h2>
             <div class="skills-grid">
                 <span>Python</span>
-                <span>SQL</span>
-                <span>Machine Learning</span>
-                <span>REST APIs</span>
-                <span>Docker</span>
-                <span>Anthropic Claude</span>
-                <span>SEO Writing</span>
-                <span>Git</span>
+                <span>Machine Larning</span>
+                <span>Data Science</span>
+                <span>Artificial Intelligence</span>
+                <span>Predictive Modeling</span>
+                <span>LLMs</span>
+                <span>Agentic AI</span>
+                <span>Github</span>
+                <span>Deep Neural Networks</span>
             </div>
         </div>
     </section>
